--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!-- The Basics -->
     <groupId>log4j2</groupId>
     <artifactId>log4j2-archive-rolling-file-appender</artifactId>
-    <version>0.2</version>
+    <version>0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
