--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <!-- The Basics -->
     <groupId>log4j2</groupId>
     <artifactId>log4j2-archive-rolling-file-appender</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -88,7 +87,8 @@
         <developerConnection>scm:git:git@github.com:panchmp/log4j2-archive-rolling-file-appender.git
         </developerConnection>
         <url>scm:git:git@github.com:panchmp/log4j2-archive-rolling-file-appender.git</url>
-    </scm>
+      <tag>log4j2-archive-rolling-file-appender-2.2.0</tag>
+  </scm>
 
     <distributionManagement>
         <snapshotRepository>
