--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!-- The Basics -->
     <groupId>log4j2</groupId>
     <artifactId>log4j2-archive-rolling-file-appender</artifactId>
-    <version>2.2.0</version>
+    <version>2.2.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -87,7 +87,7 @@
         <developerConnection>scm:git:git@github.com:panchmp/log4j2-archive-rolling-file-appender.git
         </developerConnection>
         <url>scm:git:git@github.com:panchmp/log4j2-archive-rolling-file-appender.git</url>
-      <tag>log4j2-archive-rolling-file-appender-2.2.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
